<resources>
    <string name="app_name">CoTripper</string>

    <string name="action_settings">Settings</string>
    <string name="app_aim">Aimed to provide online support for overseas travelers</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="or">OR</string>
    <string name="log_in_facebook">Log In With Facebook ></string>
    <string name="title_activity_sign_up_1">SignUp_1</string>

    <string name="hello_world">Hello world!</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="next">Next</string>
    <string name="info">By signing up, you agree to the China Terms of Service and Privacy Policy</string>
    <string name="sign_in">Already have an account? Sign In ></string>
    <string name="title_activity_sign_up_2">SignUp_2</string>
    <string name="hint_name">FullName</string>
    <string name="title_activity_sign_up_3">SignUp_3</string>
    <string name="title_activity_log_in">Log_in</string>
    <string name="Log_in">Log in</string>
    <string name="forgetpw">Forgot your password? Click here</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="is_contact_customer">Being contact customer service, please wait...</string>
    <string name="is_contact_customer_failure_seconed">Contact customer service failure:</string>
</resources>
