<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.xuan.cotripper.main.LogIn"
    android:orientation="vertical">


    <EditText
        style="@style/hintStyle"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:id="@+id/login_email" />

    <EditText
        style="@style/hintStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/hint_password"
        android:password="true"
        android:inputType="textPassword"
        android:id="@+id/login_password" />
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:background="#80bebebe"
        android:layout_height="45dp"
        android:layout_margin="30dp"
        android:text="@string/Log_in"
        android:clickable="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/forgetpw"
        android:textSize="15sp"
        android:id="@+id/forgetpw"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <View
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="1.5dp"
            android:background="#80bebebe"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:textColor="#bebebe"
            android:text="@string/or"
            android:gravity="center_horizontal"
            android:textSize="15sp"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="1.5dp"
            android:background="#80bebebe"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <TextView
        android:id="@+id/facebook2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/log_in_facebook"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:clickable="true"/>

</LinearLayout>
