<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Welcome"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/app_aim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/app_aim"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:orientation="horizontal">
    <Button
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="60dp"
        android:textAllCaps="false"
        android:text="@string/sign_up"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/log_in"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_height="60dp"
        android:textAllCaps="false"
        android:text="@string/log_in"
        android:textSize="20sp"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <View
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="1.5dp"
            android:background="#80bebebe"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:textColor="#bebebe"
            android:text="@string/or"
            android:gravity="center_horizontal"
            android:textSize="15sp"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="1.5dp"
            android:background="#80bebebe"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <TextView
        android:id="@+id/facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/log_in_facebook"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:clickable="true"/>
</LinearLayout>
